fixed zooming issue on mobile device

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ html {
   height: 100vh;
   width: 100vw;
   overflow: hidden;
+  touch-action: manipulation;
 }
 
 body {
